--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,7 +6,7 @@
         <div id="form">
             <p>Enter your new account information</p>
             <hr/>
-            <form action="/login" method="post">
+            <form action="/signup" method="post">
             <div class="form-group">
                 <label for="form_mail">Mail</label>
                 <input id="form_mail" type="text" name="mail" />
