--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,7 +6,7 @@
         <div id="form">
             <p>Enter your new account information</p>
             <hr/>
-            <form action="/signup" method="post">
+            <form action="/signup/newaccount" method="post">
             <div class="form-group">
                 <label for="form_mail">Mail</label>
                 <input id="form_mail" type="text" name="mail" />
@@ -19,9 +19,10 @@
                 <label for="form_password">Password</label>
                 <input id="form_password" type="password" name="password" />
             </div>
+            <input type="submit" value="confirmer"/>
             </form>
             <hr/>
-            <button class="btn btn-success btn-block" id="new-account" type="submit" href="/signup" onClick='document.location.href="/login"'>
+            <button class="btn btn-success btn-block" id="new-account" type="submit" value="submit" href="/signup" onClick='document.location.href="/login"'>
                 Create an account
             </button>
         </div>
