--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,12 +19,11 @@
                 <label for="form_password">Password</label>
                 <input id="form_password" type="password" name="password" />
             </div>
-            <input type="submit" value="confirmer"/>
-            </form>
-            <hr/>
-            <button class="btn btn-success btn-block" id="new-account" type="submit" value="submit" href="/signup" onClick='document.location.href="/login"'>
+            <button class="btn btn-success btn-block" id="new-account" type="submit" value="submit" href="/signup/newaccount">
                 Create an account
             </button>
+            </form>
+            <hr/>
         </div>
     </body>
 </html>
